# classification_MLOPS

./: .env  README.md  main.py  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  Tele.csv.dvc  processed_telco.csv.dvc
models/: .gitignore  churn_encoder.pkl.dvc  column_transformer.pkl  column_transformer.pkl.dvc  label_encoders.pkl  label_encoders.pkl.dvc  rf_model.pkl.dvc
params/: params_10.json  params_11.json  params_13.json  params_14.json  params_15.json  params_16.json  params_17.json  params_2.json  params_3.json  params_4.json  params_5.json  params_6.json  params_7.json  params_8.json  params_9.json
src/: app.py  preprocess.py  train.py
